<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sofia.orth_ch_guide.MainActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_1"
        android:id="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_2"
        android:id="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_3"
        android:id="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_4"
        android:id="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>
